# mode

./: .gitignore  Cargo.toml  LICENSE-MIT  README-v0.3.md  README.md  UPGRADING-v0.3.md  UPGRADING-v0.4.md
examples/: activity.rs  counter.rs  enum.rs  turing.rs
src/: automaton.rs  family.rs  lib.rs  mode.rs  mode_wrapper.rs  transition.rs
