[package]
name = "mode"
version = "0.4.0"
authors = ["Andrew Thomas Christensen <andrew@andrewtc.com>"]
edition = "2018"

description = "A behavioral state machine library written in Rust"

documentation = "https://docs.rs/mode"
repository = "https://github.com/andrewtc/mode"

readme = "README.md"

keywords = ["state", "machine", "finite", "behavioral", "automaton"]
categories = ["rust-patterns", "simulation", "data-structures"]

license = "Apache-2.0 OR MIT"

[badges]
travis-ci = { repository = "andrewtc/mode", branch = "master" }

[dependencies]